# gitdrive

./: AGENTS.md  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
crates/gitdrive-cli/: Cargo.toml
crates/gitdrive-cli/src/: main.rs
crates/gitdrive-core/: Cargo.toml
crates/gitdrive-core/src/: config.rs  conflict.rs  error.rs  git.rs  lfs.rs  lib.rs  sparse.rs  sync.rs  watcher.rs
crates/gitdrive-core/tests/: integration.rs
