[package]
name = "gitdrive-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
gitdrive-core = { path = "../gitdrive-core" }
clap = { version = "4", features = ["derive"] }
dirs = "6"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
